--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,6 @@
 @import "config/variables";
 @import "layout/layout";
 @import "base/base";
-@import "components/botons";
+@import "components/buttons";
 @import "components/header";
-@import "components/menu";
+@import "components/menu"; 
