--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 :root {
   --black-700: #151515;
   --black-500: #232323;
@@ -18,12 +19,20 @@
   --z-modal: 1000; }
 
 :root {
-  --h1-font-size: 2rem;
-  --h2-font-size:1.5rem;
-  --h3-font-size: 1.25rem;
-  --item-font-size: 1rem;
-  --body-font-size: 0.875rem;
-  --small-font-size: .5rem; }
+  --h1-font-size: 1.5rem;
+  --h2-font-size:1.25rem;
+  --h3-font-size: 1.10rem;
+  --item-font-size: 0.875rem;
+  --body-font-size: 0.650rem;
+  --small-font-size: .4rem; }
+  @media screen and (min-width: 472px) {
+    :root {
+      --h1-font-size: 2rem;
+      --h2-font-size: 1.5rem;
+      --h3-font-size: 1.25rem;
+      --item-font-size: 1.10rem;
+      --body-font-size: 0.875rem;
+      --small-font-size: .650rem; } }
   @media screen and (min-width: 768px) {
     :root {
       --h1-font-size: 2.5rem;
@@ -73,14 +82,65 @@ img {
   max-width: 100%; }
 
 h1 {
-  font-size: var(--h1-font-size); }
+  font-size: var(--h1-font-size);
+  font-family: "Lora", serif;
+  font-weight: 500; }
 
 h2 {
-  font-size: var(--h2-font-size); }
+  font-size: var(--h2-font-size);
+  font-family: "Lora", serif; }
 
 h1, h2, h3, h4, h5 {
+  font-family: "Lora", serif;
   margin-top: 0;
   margin-bottom: 0; }
+
+.button {
+  --padding: .75em 0.5em;
+  padding: var(--padding);
+  border-radius: 0.5rem;
+  font-weight: 600;
+  margin: 1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  @media screen and (min-width: 768px) {
+    .button {
+      --padding: .75em 1.5em; } }
+  .button__default_icon {
+    background-color: var(--yellow-400);
+    color: var(--black-700);
+    transition: ease all 0.3s; }
+  .button__ghost_icon {
+    background: transparent;
+    color: var(--white-100);
+    border: 2px var(--yellow-600) solid;
+    transition: ease all 0.3s; }
+
+.button__default_icon:hover {
+  background-color: var(--yellow-600);
+  cursor: pointer; }
+
+.button__ghost_icon:hover {
+  background-color: var(--yellow-300);
+  color: var(--black-300);
+  border-color: var(--black-300);
+  border-width: 2px;
+  cursor: pointer;
+  transition: ease all 0.3s; }
+
+.button__ghost_icon:hover .icon__ghost {
+  filter: invert(42%) sepia(0%) saturate(4924%) hue-rotate(78deg) brightness(76%) contrast(103%); }
+
+.icon {
+  margin: 0;
+  padding: 0;
+  width: var(--h3-font-size);
+  text-align: center;
+  padding-right: 0.2em; }
+  .icon__ghost {
+    filter: invert(100%) sepia(0%) saturate(1887%) hue-rotate(295deg) brightness(105%) contrast(99%);
+    transition: filter 0.3s ease; }
 
 .main-header__imagen {
   position: absolute;
@@ -88,7 +148,7 @@ h1, h2, h3, h4, h5 {
   left: 0;
   width: 100%;
   height: auto;
-  max-height: 80%;
+  max-height: 75%;
   object-fit: cover;
   object-fit: center;
   display: flex;
@@ -117,7 +177,7 @@ h1, h2, h3, h4, h5 {
   color: var(--white-100);
   width: 70%;
   margin-bottom: auto;
-  --margin-top: 10vmin;
+  --margin-top: 7vmin;
   margin-top: var(--margin-top); }
   @media screen and (min-width: 768px) {
     .header-content {
@@ -134,15 +194,26 @@ h1, h2, h3, h4, h5 {
     @media screen and (min-width: 1024px) {
       .header-content__title {
         --margin-bottom: 1.5rem; } }
+  .header-content__description {
+    font-size: var(--item-font-size);
+    line-height: 1.7rem; }
+  .header-content__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1; }
 
 .main-menu {
   list-style: none;
   left: 0;
-  display: flex;
   align-items: center;
   justify-content: center;
   color: var(--white-100);
-  font-size: var(--item-font-size); }
+  font-size: var(--item-font-size);
+  display: none; }
+  @media screen and (min-width: 768px) {
+    .main-menu {
+      display: flex; } }
   .main-menu__link {
     cursor: pointer; }
   .main-menu__item {
@@ -160,3 +231,16 @@ h1, h2, h3, h4, h5 {
     color: var(--yellow-500); }
   .main-menu__link:active {
     color: var(--yellow-600); }
+  .main-menu__toggle {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    width: 2.5rem;
+    height: 1.5rem;
+    background: linear-gradient(white 20%, transparent 20%, transparent 40%, white 40%, white 60%, transparent 60%, transparent 80%, white 80%);
+    cursor: pointer;
+    z-index: var(--z-tooltip);
+    display: block; }
+    @media screen and (min-width: 768px) {
+      .main-menu__toggle {
+        display: none; } }
