--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -6,21 +6,19 @@
         left: 0;
         width: 100%;
         height: auto;
-        max-height: 80%;
+        max-height: 75%;
         object-fit: cover;
         object-fit: center;
         display: flex;
         opacity: 1;
     }
    
-
     &__block{
         position: relative;
         top: 1rem;
         z-index: var(--z-tooltip);
     }
     
-
 }
 .main-logo{
     width: 3rem;
@@ -37,14 +35,12 @@
     align-items: center;
 }
 
-
-
 .header-content{
     position: relative;
     color: $text-color;
     width: 70%;
     margin-bottom: auto;
-    --margin-top: 10vmin;
+    --margin-top: 7vmin;
     margin-top: var(--margin-top);
     @include from(s){
         --margin-top: 15vmin;
@@ -63,6 +59,15 @@
         }
     }
     &__description{
-
+        font-size: var(--item-font-size);
+        line-height: 1.7rem;
     }
+ 
+    &__buttons{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+    }
+
 }
