--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -1,11 +1,15 @@
 .main-menu{
     list-style: none;
     left: 0;
-    display: flex;
     align-items: center;
     justify-content: center;
     color: $text-color;
     font-size: var(--item-font-size);
+    display: none;
+    @include from(s){
+        display: flex;
+    }
+ 
 
     &__link{
         cursor: pointer;
@@ -31,4 +35,22 @@
     &__link:active{
         color: var(--yellow-600);
     }
+
+    &__toggle{
+        position: absolute;
+        right: 2rem;
+        top: 2rem;
+        $color: white;
+        width: 2.5rem;
+        height: 1.5rem;
+        background : linear-gradient($color 20%, transparent 20%, transparent 40%, $color 40%, $color 60%, transparent 60%, transparent 80%, $color 80%);
+        cursor     : pointer;
+        z-index: var(--z-tooltip);
+        display: block;
+
+        @include from(s){
+            display: none;
+        }
+    }
+    
 }
