--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,8 @@
   --h1-font-size: 1.5rem;
   --h2-font-size:1.25rem;
   --h3-font-size: 1.10rem;
-  --item-font-size: 0.875rem;
+  --item-font-size: 0.750rem;
+  --description-font-size: 0.650;
   --body-font-size: 0.650rem;
   --small-font-size: .4rem; }
   @media screen and (min-width: 472px) {
@@ -31,6 +32,7 @@
       --h2-font-size: 1.5rem;
       --h3-font-size: 1.25rem;
       --item-font-size: 1.10rem;
+      --description-font-size: 1rem;
       --body-font-size: 0.875rem;
       --small-font-size: .650rem; } }
   @media screen and (min-width: 768px) {
@@ -39,6 +41,7 @@
       --h2-font-size: 2rem;
       --h3-font-size: 1.75rem;
       --item-font-size: 1.25rem;
+      --description-font-size: 1.15rem;
       --body-font-size: 1rem;
       --small-font-size: .750rem; } }
   @media screen and (min-width: 1024px) {
@@ -47,6 +50,7 @@
       --h2-font-size: 2.5rem;
       --h3-font-size: 1.75rem;
       --item-font-size: 1.5rem;
+      --description-font-size: 1.6rem;
       --body-font-size: 1.25rem;
       --small-font-size: .875rem; } }
 
@@ -69,11 +73,14 @@
 *, ::after, ::before {
   box-sizing: border-box;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  list-style: none; }
 
 body {
   font-family: "Roboto Serif", serif;
-  font-size: var(--body-font-size); }
+  font-size: var(--body-font-size);
+  background-color: var(--black-500);
+  color: var(--white-100); }
 
 a {
   text-decoration: none; }
@@ -96,15 +103,18 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 0; }
 
 .button {
-  --padding: .75em 0.5em;
+  --padding: .4em 0.5em;
   padding: var(--padding);
   border-radius: 0.5rem;
   font-weight: 600;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center; }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 472px) {
+    .button {
+      --padding: .55em 1.5em; } }
+  @media screen and (min-width: 472px) {
     .button {
       --padding: .75em 1.5em; } }
   .button__default_icon {
@@ -148,11 +158,10 @@ h1, h2, h3, h4, h5 {
   left: 0;
   width: 100%;
   height: auto;
-  max-height: 75%;
+  max-height: 70%;
   object-fit: cover;
   object-fit: center;
-  display: flex;
-  opacity: 1; }
+  display: flex; }
 
 .main-header__block {
   position: relative;
@@ -166,7 +175,6 @@ h1, h2, h3, h4, h5 {
       width: 5rem; } }
 
 .navbar {
-  top: -20px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -174,9 +182,7 @@ h1, h2, h3, h4, h5 {
 
 .header-content {
   position: relative;
-  color: var(--white-100);
   width: 70%;
-  margin-bottom: auto;
   --margin-top: 7vmin;
   margin-top: var(--margin-top); }
   @media screen and (min-width: 768px) {
@@ -195,29 +201,69 @@ h1, h2, h3, h4, h5 {
       .header-content__title {
         --margin-bottom: 1.5rem; } }
   .header-content__description {
-    font-size: var(--item-font-size);
-    line-height: 1.7rem; }
+    font-size: var(--description-font-size);
+    line-height: 1rem;
+    margin-bottom: 0; }
+    @media screen and (min-width: 472px) {
+      .header-content__description {
+        line-height: 1.2rem; } }
+    @media screen and (min-width: 768px) {
+      .header-content__description {
+        line-height: 1.7rem;
+        margin-bottom: 1rem; } }
   .header-content__buttons {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1; }
+    flex: 1;
+    padding-bottom: 20%; }
+    @media screen and (min-width: 472px) {
+      .header-content__buttons {
+        padding-bottom: 35%; } }
+    @media screen and (min-width: 768px) {
+      .header-content__buttons {
+        padding-bottom: 27%; } }
+    @media screen and (min-width: 1024px) {
+      .header-content__buttons {
+        padding-bottom: 25%; } }
+
+.main-header__cover-container {
+  height: 80;
+  max-height: 80 .main-header__cover-container; }
 
 .main-menu {
-  list-style: none;
-  left: 0;
-  align-items: center;
-  justify-content: center;
-  color: var(--white-100);
   font-size: var(--item-font-size);
-  display: none; }
+  color: var(--white-100);
+  background: var(--black-700);
+  position: fixed;
+  left: 100vw;
+  height: 100vh;
+  width: 90vw;
+  transition: left .3s ease;
+  top: 4rem;
+  z-index: var(--z-fixed);
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
   @media screen and (min-width: 768px) {
     .main-menu {
-      display: flex; } }
+      position: static;
+      background: transparent;
+      flex-direction: row;
+      padding-top: 0;
+      height: auto;
+      width: auto;
+      z-index: var(--z-modal); } }
   .main-menu__link {
     cursor: pointer; }
   .main-menu__item {
-    margin-left: 2rem; }
+    font-size: var(--h1-font-size);
+    margin-top: 3rem; }
+    @media screen and (min-width: 768px) {
+      .main-menu__item {
+        font-size: var(--item-font-size);
+        margin-left: 2rem;
+        margin-top: 0; } }
   .main-menu__link::after {
     content: '';
     display: block;
@@ -233,8 +279,8 @@ h1, h2, h3, h4, h5 {
     color: var(--yellow-600); }
   .main-menu__toggle {
     position: absolute;
-    right: 2rem;
-    top: 2rem;
+    right: 1rem;
+    top: 1rem;
     width: 2.5rem;
     height: 1.5rem;
     background: linear-gradient(white 20%, transparent 20%, transparent 40%, white 40%, white 60%, transparent 60%, transparent 80%, white 80%);
@@ -244,3 +290,55 @@ h1, h2, h3, h4, h5 {
     @media screen and (min-width: 768px) {
       .main-menu__toggle {
         display: none; } }
+
+.show {
+  left: 10vw; }
+
+.main-portada {
+  display: flex;
+  flex-direction: row; }
+  .main-portada__fotos {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 20px;
+    gap: 1rem; }
+    @media screen and (min-width: 472px) {
+      .main-portada__fotos {
+        width: 100%;
+        grid-auto-rows: 30px; } }
+    @media screen and (min-width: 768px) {
+      .main-portada__fotos {
+        width: 50%;
+        grid-auto-rows: 50px; } }
+  .main-portada__foto1 {
+    grid-column: 1/span 1;
+    grid-row: 2/span 5; }
+  .main-portada__foto2 {
+    grid-column: 2/ span 1;
+    grid-row: 1/span 5; }
+  .main-portada__foto3 {
+    grid-column: 1/ span 1;
+    grid-row: 7/span 5; }
+  .main-portada__foto4 {
+    grid-column: 2/ span 1;
+    grid-row: 6/span 5; }
+  .main-portada__content {
+    width: 100%;
+    text-align: left;
+    padding: 1.5em; }
+    @media screen and (min-width: 768px) {
+      .main-portada__content {
+        width: 50%; } }
+  .main-portada__titulo {
+    color: var(--yellow-400);
+    padding-bottom: 1.5em; }
+  .main-portada__description {
+    line-height: 2.5em;
+    padding-bottom: 1.5em; }
+
+.fotos {
+  object-fit: cover;
+  object-fit: center;
+  width: 100%;
+  height: 100%; }
