--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -5,11 +5,14 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 
 body{
     font-family: "Roboto Serif", serif;
     font-size: var(--body-font-size);
+    background-color: var(--black-500);
+    color: $text-color;
 }
 
 a{
