--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,16 +1,16 @@
 
 .main-header{
+    
     &__imagen{
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: auto;
-        max-height: 75%;
+        max-height: 70%;
         object-fit: cover;
         object-fit: center;
         display: flex;
-        opacity: 1;
     }
    
     &__block{
@@ -28,7 +28,6 @@
     
 }
 .navbar{
-    top: -20px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -37,10 +36,9 @@
 
 .header-content{
     position: relative;
-    color: $text-color;
     width: 70%;
-    margin-bottom: auto;
     --margin-top: 7vmin;
+
     margin-top: var(--margin-top);
     @include from(s){
         --margin-top: 15vmin;
@@ -48,6 +46,8 @@
     @include from(l){
         --margin-top: 20vmin;
     }
+
+
     &__title{
         --margin-bottom: 0.5rem;
         margin-bottom: var(--margin-bottom);
@@ -58,9 +58,18 @@
             --margin-bottom: 1.5rem;
         }
     }
+    
     &__description{
-        font-size: var(--item-font-size);
-        line-height: 1.7rem;
+        font-size: var(--description-font-size);
+        line-height: 1rem;
+        margin-bottom: 0;
+        @include from(xs){
+            line-height: 1.2rem;
+        }
+        @include from(s){
+            line-height: 1.7rem;
+            margin-bottom: 1rem;
+        }
     }
  
     &__buttons{
@@ -68,6 +77,22 @@
         justify-content: center;
         align-items: center;
         flex: 1;
+        padding-bottom: 20%;
+        @include from(xs){
+            padding-bottom: 35%;
+        }
+      
+        @include from(s){
+            padding-bottom: 27%;
+        }
+        @include from(l){
+            padding-bottom: 25%;
+        }
     }
 
+}
+
+.main-header__cover-container{
+    height: 80;
+    max-height: 80&;
 }
