--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -1,22 +1,42 @@
 .main-menu{
-    list-style: none;
-    left: 0;
-    align-items: center;
-    justify-content: center;
-    color: $text-color;
     font-size: var(--item-font-size);
-    display: none;
+    color: $text-color;
+    background: var(--black-700);
+
+    position: fixed;
+    left: 100vw;
+    height: 100vh;
+    width: 90vw;
+    transition: left .3s ease;
+    top: 4rem;
+    z-index: var(--z-fixed);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     @include from(s){
-        display: flex;
+        position: static;
+        background: transparent;
+        flex-direction: row;
+        padding-top: 0;
+        height: auto;
+        width: auto;
+        z-index: var(--z-modal);
     }
- 
 
     &__link{
         cursor: pointer;
     }
 
     &__item{
+       font-size: var(--h1-font-size);
+       margin-top: 3rem;
+       @include from(s){
+        font-size: var(--item-font-size);
         margin-left: 2rem;
+        margin-top: 0;
+        }
     }
     &__link::after{
         content: '';
@@ -38,8 +58,8 @@
 
     &__toggle{
         position: absolute;
-        right: 2rem;
-        top: 2rem;
+        right: 1rem;
+        top: 1rem;
         $color: white;
         width: 2.5rem;
         height: 1.5rem;
@@ -54,3 +74,9 @@
     }
     
 }
+
+.show{
+    left: 10vw;
+ }
+
+
