--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -3,6 +3,7 @@
     padding-left  : 1rem;
     padding-right : 1rem;
     display       : flex;
+    flex-direction: column;
     margin-left   : auto;
     margin-right  : auto;
     height        : 100%;
