--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 :root {
@@ -12,11 +13,38 @@
   --white-500: #E5E5E5; }
 
 :root {
+  --margin-top:1.15rem;
+  --margin-bottom:1rem; }
+  @media screen and (min-width: 472px) {
+    :root {
+      --margin-top:1.5rem; } }
+  @media screen and (min-width: 768px) {
+    :root {
+      --margin-top:3.5rem; } }
+  @media screen and (min-width: 1024px) {
+    :root {
+      --margin-top:5rem; } }
+  @media screen and (min-width: 472px) {
+    :root {
+      --margin-bottom:1.5rem; } }
+  @media screen and (min-width: 768px) {
+    :root {
+      --margin-bottom:2rem; } }
+  @media screen and (min-width: 1024px) {
+    :root {
+      --margin-bottom:2.5rem; } }
+
+:root {
   --z-back: -10
     --z-normal: 1;
   --z-tooltip: 10;
   --z-fixed: 100;
   --z-modal: 1000; }
+
+:root {
+  --item-font-weight: 600;
+  --body-font-weight-bold: 700;
+  --body-font-weight-medium: 500; }
 
 :root {
   --h1-font-size: 1.5rem;
@@ -59,6 +87,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   display: flex;
+  flex-direction: column;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
@@ -106,10 +135,9 @@ h1, h2, h3, h4, h5 {
   --padding: .4em 0.5em;
   padding: var(--padding);
   border-radius: 0.5rem;
-  font-weight: 600;
+  font-weight: var(--item-font-weight);
   margin: 0.5rem;
   display: flex;
-  align-items: center;
   justify-content: center; }
   @media screen and (min-width: 472px) {
     .button {
@@ -123,7 +151,6 @@ h1, h2, h3, h4, h5 {
     transition: ease all 0.3s; }
   .button__ghost_icon {
     background: transparent;
-    color: var(--white-100);
     border: 2px var(--yellow-600) solid;
     transition: ease all 0.3s; }
 
@@ -135,7 +162,6 @@ h1, h2, h3, h4, h5 {
   background-color: var(--yellow-300);
   color: var(--black-300);
   border-color: var(--black-300);
-  border-width: 2px;
   cursor: pointer;
   transition: ease all 0.3s; }
 
@@ -143,9 +169,7 @@ h1, h2, h3, h4, h5 {
   filter: invert(42%) sepia(0%) saturate(4924%) hue-rotate(78deg) brightness(76%) contrast(103%); }
 
 .icon {
-  margin: 0;
-  padding: 0;
-  width: var(--h3-font-size);
+  width: var(--item-font-size);
   text-align: center;
   padding-right: 0.2em; }
   .icon__ghost {
@@ -182,7 +206,7 @@ h1, h2, h3, h4, h5 {
 
 .header-content {
   position: relative;
-  width: 70%;
+  width: 80%;
   --margin-top: 7vmin;
   margin-top: var(--margin-top); }
   @media screen and (min-width: 768px) {
@@ -225,11 +249,7 @@ h1, h2, h3, h4, h5 {
         padding-bottom: 27%; } }
     @media screen and (min-width: 1024px) {
       .header-content__buttons {
-        padding-bottom: 25%; } }
-
-.main-header__cover-container {
-  height: 80;
-  max-height: 80 .main-header__cover-container; }
+        padding-bottom: 23%; } }
 
 .main-menu {
   font-size: var(--item-font-size);
@@ -254,8 +274,6 @@ h1, h2, h3, h4, h5 {
       height: auto;
       width: auto;
       z-index: var(--z-modal); } }
-  .main-menu__link {
-    cursor: pointer; }
   .main-menu__item {
     font-size: var(--h1-font-size);
     margin-top: 3rem; }
@@ -264,19 +282,6 @@ h1, h2, h3, h4, h5 {
         font-size: var(--item-font-size);
         margin-left: 2rem;
         margin-top: 0; } }
-  .main-menu__link::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background-color: var(--yellow-500);
-    transition: width 0.3s ease, left 0.3s ease; }
-  .main-menu__link:hover::after {
-    width: 100%; }
-  .main-menu__link:hover {
-    color: var(--yellow-500); }
-  .main-menu__link:active {
-    color: var(--yellow-600); }
   .main-menu__toggle {
     position: absolute;
     right: 1rem;
@@ -293,6 +298,26 @@ h1, h2, h3, h4, h5 {
 
 .show {
   left: 10vw; }
+
+.link {
+  cursor: pointer; }
+
+.link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: var(--yellow-500);
+  transition: width 0.3s ease, left 0.3s ease; }
+
+.link:hover::after {
+  width: 100%; }
+
+.link:hover {
+  color: var(--yellow-500); }
+
+.link:active {
+  color: var(--yellow-600); }
 
 .main-portada {
   display: flex;
@@ -326,7 +351,7 @@ h1, h2, h3, h4, h5 {
   .main-portada__content {
     width: 100%;
     text-align: left;
-    padding: 1.5em; }
+    padding: 2em; }
     @media screen and (min-width: 768px) {
       .main-portada__content {
         width: 50%; } }
@@ -342,3 +367,70 @@ h1, h2, h3, h4, h5 {
   object-fit: center;
   width: 100%;
   height: 100%; }
+
+.main-postres {
+  margin-top: var(--margin-top); }
+  .main-postres__titulo {
+    color: var(--yellow-400);
+    text-align: center; }
+  .main-postres__description {
+    text-align: center;
+    margin-bottom: var(--margin-bottom); }
+  .main-postres__cards {
+    display: flex;
+    gap: 2.5rem;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column; }
+    @media screen and (min-width: 1024px) {
+      .main-postres__cards {
+        gap: 3.5rem; } }
+    @media screen and (min-width: 768px) {
+      .main-postres__cards {
+        flex-direction: row; } }
+
+.card-postre__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1em;
+  border-radius: 0 0 10px 10px;
+  background-color: var(--black-300); }
+  @media screen and (min-width: 768px) {
+    .card-postre__content {
+      padding: 0.6em; } }
+  @media screen and (min-width: 1024px) {
+    .card-postre__content {
+      padding: 1em; } }
+
+.card-postre__nombre {
+  font-size: var(--item-font-size);
+  margin-top: 0.5em; }
+
+.card-postre__foto {
+  object-fit: cover;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  max-width: 20rem; }
+  @media screen and (min-width: 472px) {
+    .card-postre__foto {
+      max-width: 30rem; } }
+  @media screen and (min-width: 768px) {
+    .card-postre__foto {
+      max-width: 32rem; } }
+
+.card-postre__puntuación {
+  width: auto;
+  max-height: 1rem; }
+  @media screen and (min-width: 1024px) {
+    .card-postre__puntuación {
+      max-height: 3rem; } }
+
+.card-postre__footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.card-postre__ordenar {
+  text-align: end; }
