Subiendo el componente link

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,7 @@
 @import "config/variables";
 @import "layout/layout";
 @import "base/base";
+@import "base/link";
 @import "components/buttons";
 @import "components/header";
 @import "components/menu"; 
