--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,3 +8,4 @@
 @import "components/menu"; 
 @import "components/portada"; 
 @import "components/ofertasPostres";
+@import "components/descriptionLocal";
