--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,7 @@
   --h2-font-size:1.25rem;
   --h3-font-size: 1.10rem;
   --item-font-size: 0.750rem;
-  --description-font-size: 0.650;
+  --description-font-size: 0.650rem;
   --body-font-size: 0.650rem;
   --small-font-size: .4rem; }
   @media screen and (min-width: 472px) {
@@ -83,9 +83,9 @@
       --small-font-size: .875rem; } }
 
 .l-container {
-  max-width: 1400px;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  max-width: 1300px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   display: flex;
   flex-direction: column;
   margin-left: auto;
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5 {
   color: var(--yellow-600); }
 
 .button {
-  --padding: .4em 0.5em;
+  --padding: .7em 0.5em;
   padding: var(--padding);
   border-radius: 0.5rem;
   font-weight: var(--item-font-weight);
@@ -321,7 +321,8 @@ h1, h2, h3, h4, h5 {
 
 .main-portada {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  align-items: center; }
   .main-portada__fotos {
     width: 100%;
     display: grid;
@@ -357,7 +358,7 @@ h1, h2, h3, h4, h5 {
         width: 50%; } }
   .main-portada__titulo {
     color: var(--yellow-400);
-    padding-bottom: 1.5em; }
+    padding-bottom: 1em; }
   .main-portada__description {
     line-height: 2.5em;
     padding-bottom: 1.5em; }
@@ -377,60 +378,99 @@ h1, h2, h3, h4, h5 {
     text-align: center;
     margin-bottom: var(--margin-bottom); }
   .main-postres__cards {
-    display: flex;
-    gap: 2.5rem;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column; }
-    @media screen and (min-width: 1024px) {
-      .main-postres__cards {
-        gap: 3.5rem; } }
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(230px, 1fr));
+    gap: 1.5rem; }
     @media screen and (min-width: 768px) {
       .main-postres__cards {
-        flex-direction: row; } }
+        gap: 0;
+        grid-template-columns: repeat(auto-fit, minmax(230px, 1fr)); } }
 
-.card-postre__content {
+.card-postre {
   display: flex;
   flex-direction: column;
-  gap: 1em;
-  padding: 1em;
-  border-radius: 0 0 10px 10px;
-  background-color: var(--black-300); }
+  width: 75%;
+  margin: 0 auto; }
   @media screen and (min-width: 768px) {
-    .card-postre__content {
-      padding: 0.6em; } }
-  @media screen and (min-width: 1024px) {
-    .card-postre__content {
-      padding: 1em; } }
+    .card-postre {
+      width: 90%; } }
+  .card-postre__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1em;
+    gap: 1em;
+    border-radius: 0 0 10px 10px;
+    background-color: var(--black-300); }
+  .card-postre__nombre {
+    font-size: var(--item-font-size);
+    margin-top: 0.5em; }
+  .card-postre__foto {
+    object-fit: cover;
+    object-fit: center;
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    flex: 1;
+    max-height: 20rem; }
+    @media screen and (min-width: 1024px) {
+      .card-postre__foto {
+        max-height: 100rem; } }
+  .card-postre__puntuación {
+    width: auto;
+    max-height: 1rem; }
+    @media screen and (min-width: 1024px) {
+      .card-postre__puntuación {
+        max-height: 3rem; } }
+  .card-postre__footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .card-postre__tiempo {
+    display: flex;
+    align-items: center;
+    gap: 0.2em; }
+  .card-postre__ordenar {
+    text-align: end; }
 
-.card-postre__nombre {
-  font-size: var(--item-font-size);
-  margin-top: 0.5em; }
+.clock {
+  width: var(--item-font-size);
+  text-align: center;
+  padding-top: 0.2em;
+  padding-right: 0.1em; }
 
-.card-postre__foto {
-  object-fit: cover;
+.postre {
   width: 100%;
-  border-radius: 10px 10px 0 0;
-  max-width: 20rem; }
-  @media screen and (min-width: 472px) {
-    .card-postre__foto {
-      max-width: 30rem; } }
-  @media screen and (min-width: 768px) {
-    .card-postre__foto {
-      max-width: 32rem; } }
+  height: 100%; }
 
-.card-postre__puntuación {
-  width: auto;
-  max-height: 1rem; }
-  @media screen and (min-width: 1024px) {
-    .card-postre__puntuación {
-      max-height: 3rem; } }
-
-.card-postre__footer {
-  width: 100%;
+.main-local {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-.card-postre__ordenar {
-  text-align: end; }
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  margin-top: var(--margin-top); }
+  .main-local__foto-container {
+    width: 100%;
+    justify-content: start;
+    padding: 1em; }
+    @media screen and (min-width: 768px) {
+      .main-local__foto-container {
+        width: 50%; } }
+  .main-local__foto {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 1em; }
+  .main-local__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em; }
+    @media screen and (min-width: 768px) {
+      .main-local__content {
+        width: 50%; } }
+  .main-local__title {
+    color: var(--yellow-400); }
+  .main-local__description {
+    line-height: 2.5em; }
