--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -17,7 +17,7 @@ $breakpoints :(
     xs: 472px
 );
 
-$max-witdh: 1400px;
+$max-witdh: 1300px;
 $header-height: 4rem;
 $border-color: var(--yellow-600);
 $text-color: var(--white-100);
@@ -77,7 +77,7 @@ $text-color: var(--white-100);
         --h2-font-size :1.25rem;
         --h3-font-size : 1.10rem;
         --item-font-size: 0.750rem;
-        --description-font-size: 0.650;
+        --description-font-size: 0.650rem;
         --body-font-size: 0.650rem;
         --small-font-size: .4rem;
     
