--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,3 +9,5 @@
 @import "components/portada"; 
 @import "components/ofertasPostres";
 @import "components/descriptionLocal";
+@import "components/comments";
+
