--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -13,6 +13,7 @@ body{
     font-size: var(--body-font-size);
     background-color: var(--black-500);
     color: $text-color;
+    line-height: 120%;
 }
 
 a{
