--- a/assets/scss/components/_descriptionLocal.scss
+++ b/assets/scss/components/_descriptionLocal.scss
@@ -1,4 +1,9 @@
 .main-local{
+    --text-align:start;
+    @include from(s){
+        --text-align:end;
+    }
+
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -33,8 +38,12 @@
     }
     &__title{
         color: var(--yellow-400);
+        padding: 1rem;
+        text-align: var(--text-align);
+        
     }
     &__description{
         line-height: 2.5em;
+        text-align: var(--text-align);
     }
 }
