--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,17 +13,17 @@
   --white-500: #E5E5E5; }
 
 :root {
-  --margin-top:1.15rem;
+  --margin-top:2rem;
   --margin-bottom:2.5rem; }
   @media screen and (min-width: 472px) {
     :root {
-      --margin-top:1.5rem; } }
+      --margin-top:2.5rem; } }
   @media screen and (min-width: 768px) {
     :root {
-      --margin-top:3.5rem; } }
+      --margin-top:4rem; } }
   @media screen and (min-width: 1024px) {
     :root {
-      --margin-top:5rem; } }
+      --margin-top:6rem; } }
   @media screen and (min-width: 472px) {
     :root {
       --margin-bottom:3rem; } }
@@ -529,3 +529,60 @@ h1, h2, h3, h4, h5 {
   .main-comment__text {
     font-size: var(--small-font-size);
     text-align: left; }
+
+.main-chef {
+  margin-top: var(--margin-top);
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem; }
+  @media screen and (min-width: 768px) {
+    .main-chef {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); } }
+  .main-chef__container {
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 1em;
+    height: 300px; }
+    @media screen and (min-width: 768px) {
+      .main-chef__container {
+        width: 100%; } }
+    @media screen and (min-width: 768px) {
+      .main-chef__container {
+        height: 400px; } }
+  .main-chef .chef1 {
+    background: linear-gradient(180deg, rgba(250, 250, 250, 0) 10%, #141414 100%), url(../img/Chef_1.jpg);
+    background-size: cover;
+    background-position: center top; }
+  .main-chef .chef2 {
+    background: linear-gradient(180deg, rgba(250, 250, 250, 0) 10%, #141414 100%), url(../img/Chef_2.jpg);
+    background-size: cover;
+    background-position: center top; }
+  .main-chef .chef3 {
+    background: linear-gradient(180deg, rgba(250, 250, 250, 0) 10%, #141414 100%), url(../img/Chef_3.jpg);
+    background-size: cover;
+    background-position: center top; }
+  .main-chef__content {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
+    padding: 1em; }
+  .main-chef__button {
+    font-size: var(--small-font-size);
+    padding: 0.75em 1.5em;
+    margin: 0;
+    text-align: center; }
+    @media screen and (min-width: 768px) {
+      .main-chef__button {
+        padding: 0.3em; } }
+
+.main-reward {
+  font-size: var(--small-font-size);
+  display: flex;
+  align-items: center; }
+  .main-reward__img {
+    width: 1rem;
+    margin-right: 0.5rem; }
+  .main-reward__button {
+    padding-left: 3rem; }
