--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,4 +11,5 @@
 @import "components/descriptionLocal";
 @import "components/comments";
 @import "components/mejoresChefs";
+@import "components/footer";
 
