--- a/assets/scss/components/_mejoresChefs.scss
+++ b/assets/scss/components/_mejoresChefs.scss
@@ -1,5 +1,4 @@
 .main-chef{
-    margin-top: var(--margin-top);
     display: grid;
     grid-template-rows: repeat(auto-fit,minmax(200px, 1fr));
     gap: 2rem;
@@ -62,8 +61,19 @@
     display: flex;
     align-items: center;
     &__img{
-        width: 1rem;
+        width: 1.25em;
         margin-right: 0.5rem;
     }
 }
 
+.main-chefs-reward{
+    margin-top: var(--margin-top);
+    text-align: center;
+    &__title{
+        color: var(--yellow-400);
+        margin-bottom: 0.5em;
+    }
+    &__description{
+        margin-bottom: 2em;
+    }
+}
